--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,9 @@ add_executable(qjacktrip ${qjacktrip_SRC})
 # Use the Widgets module from Qt 5.
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network PkgConfig::JACK)
-  add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
+  if (NOT EXISTS "jacktrip")
+    add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
+  endif ()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network "C:/Program Files/JACK2/lib/libjack64.lib" ws2_32)
 endif ()
