Minor fixes suggested for PR

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,7 +75,7 @@ if (NOT nogui)
   if (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set (qjacktrip_SRC ${qjacktrip_SRC} win/qjacktrip.rc)
   elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    set (qjacktrip_SRC ${qjacktrip_SRC} src/NoNap.mm)
+    set (qjacktrip_SRC ${qjacktrip_SRC} src/gui/NoNap.mm)
     set (CMAKE_C_FLAGS "-x objective-c")
     set (CMAKE_EXE_LINKER_FLAGS "-framework Foundation")
   endif ()
