Check jack location when building on windows with cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,13 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   set (ENV{PKG_CONFIG_PATH} "/usr/local/lib/pkgconfig")
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   add_compile_definitions(__WIN_32__ _WIN32_WINNT=0x0600 WIN32_LEAN_AND_MEAN)
-  include_directories("C:/Program Files/JACK2/include")
+  if (EXISTS "C:/Program Files/JACK2/include")
+    include_directories("C:/Program Files/JACK2/include")
+    set (jacklib "C:/Program Files/JACK2/lib/libjack64.lib")
+  else ()
+    include_directories("C:/Program Files (x86)/Jack/includes")
+    set (jacklib "C:/Program Files (x86)/Jack/lib/libjack64.lib")
+  endif ()
   set (CMAKE_PREFIX_PATH "C:/Qt/5.15.2/mingw81_64/lib/cmake")
 endif ()
 
@@ -96,15 +102,15 @@ if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin
     target_link_libraries(jacktrip Qt5::Network PkgConfig::JACK)
   else ()
     target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network PkgConfig::JACK)
-    if (NOT EXISTS "${CMAKE_BINARY_DIR}/jacktrip")
+    if (NOT IS_SYMLINK "${CMAKE_BINARY_DIR}/jacktrip")
       add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
     endif ()
   endif ()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   if (nogui)
-    target_link_libraries(jacktrip Qt5::Network "C:/Program Files/JACK2/lib/libjack64.lib" ws2_32)
+    target_link_libraries(jacktrip Qt5::Network ${jacklib} ws2_32)
   else ()
-    target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network "C:/Program Files/JACK2/lib/libjack64.lib" ws2_32)
+    target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network ${jacklib} ws2_32)
   endif ()
 endif ()
 
