Change executable name to jacktrip
Change executable name to jacktrip. Use --gui to force use of the GUI. Use --test-gui to check if the binary has been built with GUI support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,33 +90,22 @@ endif ()
 add_compile_definitions(WAIRTOHUB)
 
 # Tell CMake to create the executable
-if (nogui)
-  add_executable(jacktrip ${qjacktrip_SRC})
-else ()
-  add_executable(qjacktrip ${qjacktrip_SRC})
-endif ()
+add_executable(jacktrip ${qjacktrip_SRC})
 
 # Use the Widgets module from Qt 5.
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   if (nogui)
     target_link_libraries(jacktrip Qt5::Network PkgConfig::JACK)
   else ()
-    target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network PkgConfig::JACK)
-    if (NOT IS_SYMLINK "${CMAKE_BINARY_DIR}/jacktrip")
-      add_custom_target(create_symlink ALL COMMAND ${CMAKE_COMMAND} -E create_symlink qjacktrip jacktrip)
-    endif ()
+    target_link_libraries(jacktrip Qt5::Widgets Qt5::Network PkgConfig::JACK)
   endif ()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
   if (nogui)
     target_link_libraries(jacktrip Qt5::Network ${jacklib} ws2_32)
   else ()
-    target_link_libraries(qjacktrip Qt5::Widgets Qt5::Network ${jacklib} ws2_32)
+    target_link_libraries(jacktrip Qt5::Widgets Qt5::Network ${jacklib} ws2_32)
   endif ()
 endif ()
 
 # Install the executable
-if (nogui)
-  install(TARGETS jacktrip DESTINATION bin)
-else ()
-  install(TARGETS qjacktrip DESTINATION bin)
-endif ()
+install(TARGETS jacktrip DESTINATION bin)
