--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,4 +1,4 @@
 option('wair', type : 'feature', value : 'disabled', description: 'WAIR')
 option('rtaudio', type : 'feature', value : 'auto', description: 'Build with RtAudio Backend')
 option('jack', type : 'feature', value : 'auto', description: 'Build with Jack Backend')
-
+option('nogui', type : 'boolean', value : 'false', description: 'Build without graphical user interface')
