--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -42,7 +42,7 @@ jobs:
         if: runner.os == 'Linux'
         run: |
           sudo apt-get update
-          sudo apt-get install --yes libpulse-dev libasound2-dev libjack-dev qt5-default qt5-qmake qttools5-dev
+          sudo apt-get install --yes libpulse-dev libasound2-dev libjack-dev qt5-default qt5-qmake qttools5-dev help2man
           python -m pip install --upgrade pip
           pip install meson ninja
       - name: install dependencies for macOS
@@ -52,7 +52,7 @@ jobs:
           HOMEBREW_NO_AUTO_UPDATE: 1
           HOMEBREW_NO_INSTALL_CLEANUP: 1
         run: |
-          brew install qt5 jack meson
+          brew install qt5 jack meson help2man
           brew link qt5 --force
       - name: install dependencies for Windows
         if: runner.os == 'Windows'
