meson builds but doesn't play incoming sig, qmake ok

--- a/meson.build
+++ b/meson.build
@@ -37,6 +37,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/Settings.h',
 	'src/UdpDataProtocol.h',
 	'src/UdpHubListener.h',
+	'src/PoolBuffer.h',
 	'src/gui/about.h',
 	'src/gui/qjacktrip.h',
 	'src/gui/messageDialog.h',
@@ -64,6 +65,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/PacketHeader.cpp',
 	'src/RingBuffer.cpp',
 	'src/JitterBuffer.cpp',
+	'src/PoolBuffer.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
 	'src/UdpHubListener.cpp',
