[Linux] Add 48x48 png icon

--- a/meson.build
+++ b/meson.build
@@ -112,6 +112,7 @@ endif
 if host_machine.system() == 'linux'
 	install_data('linux/jacktrip.desktop', install_dir: get_option('datadir') / 'applications')
 	install_data('linux/jacktrip.svg', install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps')
+	install_data('linux/jacktrip_48x48.png', rename: 'jacktrip.png', install_dir: get_option('datadir') / 'icons' / 'hicolor' / '48x48' / 'apps')
 endif
 
 deps += dependency('threads')
