--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -96,6 +96,9 @@ jobs:
             brew install rt-audio
             rm -f `brew --prefix rt-audio`/lib/*.dylib # remove the dynamic library, we want static only
           fi
+          if [[ -n ${{ matrix.installer-path }} ]]; then
+            brew install packages
+          fi
       - name: install dependencies for Windows
         if: runner.os == 'Windows'
         shell: bash
