[GHA] Build with RtAudio on MacOS/Meson

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -86,7 +86,7 @@ jobs:
         run: |
           meson --buildtype release $BUILD_PATH
           cd $BUILD_PATH
-          meson configure -Ddefault_library=static
+          meson configure -Ddefault_library=static -Drtaudio=enabled
           meson compile
       - name: build on Windows
         if: runner.os == 'Windows'
