[GHA:Meson] Build with rtaudio on Windows

--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -93,7 +93,7 @@ jobs:
         run: |
           meson --buildtype release builddir
           cd builddir
-          meson configure -Ddefault_library=static
+          meson configure -Ddefault_library=static -Drtaudio=enabled
           meson compile
       - name: upload artifacts
         uses: actions/upload-artifact@v2
