--- a/linux/jacktrip.desktop
+++ b/linux/jacktrip.desktop
@@ -3,6 +3,7 @@ Type=Application
 Encoding=UTF-8
 Name=JackTrip
 Comment=Network Music Performance over the Internet
+Comment[fr]=Performance de musique en réseau sur internet
 Exec=jacktrip
 Icon=jacktrip
 Terminal=false
