--- a/win/jacktrip.wxs.template
+++ b/win/jacktrip.wxs.template
@@ -3,7 +3,7 @@
     <Product Name='JackTrip' Manufacturer='JackTrip'
         Id='d5a8cca9-264c-41fd-8efc-1cef0850091f'
         UpgradeCode='70450e42-8a91-4c28-8f00-52c6b8e86e37'
-        Language='1033' Codepage='1252' Version='1.3.0'>
+        Language='1033' Codepage='1252' Version='$VERSION'>
 
         <Package Id='*' Keywords='Installer' Description='JackTrip Installer'
             Comments='Developed by SoundWIRE Group at CCRMA, Stanford' Manufacturer='JackTrip'
