--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,7 @@ nav:
     - Meson Build: Build/Meson_build.md
     - Write Documentation: Documentation/MkDocs.md
   - About:
-    - Authors: About/Authors.md
+    - Contributors: About/Contributors.md
     - Resources: About/Resources.md
     - Changelog: About/CHANGELOG.md
     - License: About/License.md
@@ -23,3 +23,5 @@ markdown_extensions:
   - pymdownx.snippets
   - pymdownx.tabbed
   - pymdownx.superfences
+  - pymdownx.details
+  - admonition
