--- a/.github/workflows/meson.yml
+++ b/.github/workflows/meson.yml
@@ -94,7 +94,7 @@ jobs:
           meson --buildtype release -Drtaudio=enabled builddir
           cd builddir
           meson configure -Ddefault_library=both -Drtaudio:default_library=static -Drtaudio:wasapi=true -Dwingetopt:default_library=static
-          meson compile -v
+          meson compile
       - name: upload artifacts
         uses: actions/upload-artifact@v2
         with:
