--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -58,6 +58,7 @@ jobs:
             static: true
             # installer: true
             jacktrip-path: release/jacktrip.exe
+            installer-path: installer # relative to build path; triggers installer creation and upload
 
     env:
       BUILD_PATH: ${{ github.workspace }}/builddir
@@ -217,13 +218,14 @@ jobs:
             mkdir -p $BUILD_PATH/${{ matrix.installer-path }}
             cp -R package/build/* $BUILD_PATH/${{ matrix.installer-path }}
           fi
+      - name: create installer on Windows
+        if: runner.os == 'Windows' && matrix.installer-path
+        shell: cmd
         run: |
-          CONFIG=
-          if [[ -n "${{ matrix.installer-path }}" ]]; then 
-            CONFIG="-i $CONFIG"
-          fi
-          cd macos
-          ./assemble_app.sh $CONFIG
+          cd win
+          call "build_installer.bat"
+          bash -c "mkdir -p $BUILD_PATH/${{ matrix.installer-path }}"
+          bash -c "cp deploy/*.msi $BUILD_PATH/${{ matrix.installer-path }}"
       - name: upload jacktrip binary
         uses: actions/upload-artifact@v2
         if: matrix.jacktrip-path
