gha qmake: checkout submodules

--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -73,6 +73,8 @@ jobs:
       
     steps:
       - uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: set version string for artifacts
         shell: bash
         id: set-version
