--- a/meson.build
+++ b/meson.build
@@ -26,6 +26,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/PacketHeader.cpp',
 	'src/RingBuffer.cpp',
 	'src/JitterBuffer.cpp',
+	'src/PoolBuffer.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
 	'src/UdpHubListener.cpp',
