Use wix preprocessor
Turns out that wix has a preprocessor. Use this to simplify installer creation. (Can substitute version info into the installer more easily, and don't need a separate files_static.wxs)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ project(QJackTrip)
 
 set(nogui FALSE)
 set (rtaudio TRUE)
+set (weakjack TRUE)
 
 if (nogui)
   add_compile_definitions(NO_GUI)
@@ -12,6 +13,11 @@ endif ()
 if (rtaudio)
   add_compile_definitions(__RT_AUDIO__)
 endif ()
+
+if (weakjack)
+  add_compile_definitions(USE_WEAK_JACK)
+  include_directories("externals/weakjack")
+endif()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   add_compile_definitions(__LINUX__)
@@ -28,11 +34,19 @@ elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
     set (jacklib "C:/Program Files (x86)/Jack/lib/libjack64.lib")
   endif ()
   set (CMAKE_PREFIX_PATH "C:/Qt/5.15.2/mingw81_64/lib/cmake")
+  if (rtaudio)
+    include_directories("C:/Program Files (x86)/RtAudio/include")
+    set (rtaudiolib "C:/Program Files (x86)/RtAudio/lib/librtaudio.dll.a")
+  endif ()
 endif ()
 
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
   find_package(PkgConfig REQUIRED)
   pkg_check_modules(JACK REQUIRED IMPORTED_TARGET jack)
+  if (weakjack)
+    # On mac, weakjack doesnt't find jack unless this is explicitly included.
+    include_directories(${JACK_INCLUDE_DIRS})
+  endif ()
   if (rtaudio)
     pkg_check_modules(RTAUDIO REQUIRED IMPORTED_TARGET rtaudio)
   endif ()
@@ -85,6 +99,12 @@ if (rtaudio)
   )
 endif ()
 
+if (weakjack)
+  set (qjacktrip_SRC ${qjacktrip_SRC}
+    externals/weakjack/weak_libjack.c
+  )
+endif ()
+
 if (NOT nogui)
   set (qjacktrip_SRC ${qjacktrip_SRC}
     src/gui/qjacktrip.cpp
@@ -113,14 +133,23 @@ if (NOT nogui)
   set (qjacktrip_LIBS ${qjacktrip_LIBS} Qt5::Network)
 endif ()
 
-if (rtaudio)
-  set (qjacktrip_LIBS ${qjacktrip_LIBS} PkgConfig::RTAUDIO)
-endif ()
-
 if (${CMAKE_SYSTEM_NAME} MATCHES "Linux" OR ${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-  set (qjacktrip_LIBS ${qjacktrip_LIBS} PkgConfig::JACK)
+  if (weakjack)
+    set (qjacktrip_LIBS ${qjacktrip_LIBS} dl)
+  else ()
+    set (qjacktrip_LIBS ${qjacktrip_LIBS} PkgConfig::JACK)
+  endif ()
+  if (rtaudio)
+    set (qjacktrip_LIBS ${qjacktrip_LIBS} PkgConfig::RTAUDIO)
+  endif ()
 elseif (${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-  set (qjacktrip_LIBS ${qjacktrip_LIBS} ${jacklib} ws2_32)
+  set (qjacktrip_LIBS ${qjacktrip_LIBS} ws2_32)
+  if (NOT weakjack)
+    set (qjacktrip_LIBS ${qjacktrip_LIBS} ${jacklib})
+  endif ()
+  if (rtaudio)
+    set (qjacktrip_LIBS ${qjacktrip_LIBS} ${rtaudiolib})
+  endif ()
 endif ()
 
 target_link_libraries(jacktrip ${qjacktrip_LIBS})
