--- a/linux/org.jacktrip.JackTrip.desktop.in
+++ b/linux/org.jacktrip.JackTrip.desktop.in
@@ -4,5 +4,5 @@ Name=JackTrip
 Comment=Network Music Performance over the Internet
 Comment[fr]=Performance de musique en réseau sur internet
 Exec=jacktrip
-Icon=jacktrip
+Icon=@icon@
 Terminal=false
