--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -22,4 +22,4 @@ modules:
     sources:
       - type: git
         url: https://github.com/jacktrip/jacktrip.git
-        branch: dev
+        branch: prepare_flatpak
