[Flatpak] Build Devel from dev

--- a/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
+++ b/linux/flatpak/org.jacktrip.JackTrip.Devel.yml
@@ -26,4 +26,4 @@ modules:
     sources:
       - type: git
         url: https://github.com/jacktrip/jacktrip.git
-        branch: prepare_flatpak
+        branch: dev
